feat(deploy): setup project for Render